# dev_container_template

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  ruff.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json
src/: main.py
